# util

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
src/: stringfmt.cpp  stringfmt.h  util.h
test_package/: CMakeLists.txt  conanfile.py  test_util.cpp
